--- a/index.html
+++ b/index.html
@@ -1,47 +1,44 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=1170, height=2532, user-scalable=no">
-  <title>iPhone UI Main Page</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=390, height=844, user-scalable=no" />
+  <title>Main Page</title>
   <style>
-    body {
+    html, body {
       margin: 0;
       padding: 0;
-      width: 1170px;
-      height: 2532px;
+      width: 390px;
+      height: 844px;
       overflow: hidden;
+      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
       background: url('images/iphone12-wallpaper.jpg') no-repeat center center;
       background-size: cover;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
 
     .greeting {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      text-align: center;
+      font-size: 36px;
       color: white;
-      font-size: 48px;
+      margin-top: 300px;
       font-weight: bold;
     }
 
     .dock {
-      position: absolute;
-      bottom: 50px;
-      left: 50%;
-      transform: translateX(-50%);
       display: flex;
-      gap: 60px;
+      justify-content: center;
+      gap: 30px;
+      padding-bottom: 40px;
     }
 
     .dock img {
-      width: 120px;
-      height: 120px;
-      border-radius: 30px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+      width: 60px;
+      height: 60px;
+      border-radius: 20px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
       cursor: pointer;
     }
   </style>
@@ -49,9 +46,9 @@
 <body>
   <div class="greeting">Hello</div>
   <div class="dock">
-    <img src="images/icon.phone.webp" alt="전화 아이콘">
-    <img src="images/icon.messages.webp" alt="메시지 아이콘" onclick="location.href='about.html'">
-    <img src="images/icon.apple-music.webp" alt="애플 뮤직 아이콘">
+    <img src="images/icon.phone.webp" alt="Phone">
+    <img src="images/icon.messages.webp" alt="Messages" onclick="location.href='about.html'">
+    <img src="images/icon.apple-music.webp" alt="Music">
   </div>
 </body>
 </html>
