--- a/about.html
+++ b/about.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=390, initial-scale=1.0" />
+  <meta name="viewport" content="width=390, height=844, user-scalable=no" />
   <title>About Me - iMessage Style</title>
   <style>
-    body {
+    html, body {
       margin: 0;
-      background-color: white;
-      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+      padding: 0;
       width: 390px;
+      height: 844px;
       overflow: hidden;
+      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
-      height: 100vh;
+      background-color: white;
     }
 
     .chat-container {
@@ -29,7 +29,7 @@
     .message {
       position: relative;
       max-width: 75%;
-      padding: 10px 14px;
+      padding: 12px 16px;
       border-radius: 20px;
       font-size: 15px;
       line-height: 1.4;
@@ -45,17 +45,17 @@
       align-self: flex-end;
       background-color: #007AFF;
       color: white;
+      border-top-right-radius: 4px;
     }
 
-    /* 말풍선 꼬리: 초기 단순한 형태 */
     .from-me::after {
-      content: \"\";
+      content: "";
       position: absolute;
       bottom: 0;
-      right: -10px;
+      right: -6px;
       width: 0;
       height: 0;
-      border: 10px solid transparent;
+      border: 6px solid transparent;
       border-top-color: #007AFF;
       border-bottom: 0;
       border-right: 0;
@@ -81,7 +81,7 @@
       background-color: white;
     }
 
-    input[type=\"text\"] {
+    input[type="text"] {
       flex: 1;
       padding: 10px 14px;
       border: 1px solid #ccc;
@@ -119,22 +119,16 @@
     <button onclick="sendMessage()">↑</button>
   </div>
   <script>
-    function setBodyHeight() {
-      document.body.style.height = window.innerHeight + \"px\";
-    }
-    setBodyHeight();
-    window.addEventListener('resize', setBodyHeight);
-
     function sendMessage() {
       const input = document.getElementById('messageInput');
       const message = input.value.trim();
-      if (message === \"\") return;
+      if (message === "") return;
       const chat = document.getElementById('chat');
       const bubble = document.createElement('div');
       bubble.classList.add('message', 'from-me');
       bubble.textContent = message;
       chat.appendChild(bubble);
-      input.value = \"\";
+      input.value = "";
       chat.scrollTop = chat.scrollHeight;
     }
   </script>
