--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=390, height=844, user-scalable=no" />
-  <title>Main Page</title>
+  <meta name="viewport" content="width=390, initial-scale=1.0" />
+  <title>Main</title>
   <style>
     html, body {
       margin: 0;
@@ -12,43 +12,38 @@
       height: 844px;
       overflow: hidden;
       font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-      background: url('images/iphone12-wallpaper.jpg') no-repeat center center;
-      background-size: cover;
+      background-color: #f0f0f0;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      align-items: center;
     }
-
-    .greeting {
-      text-align: center;
-      font-size: 36px;
-      color: white;
-      margin-top: 300px;
+    .header {
+      margin-top: 60px;
+      font-size: 32px;
       font-weight: bold;
     }
-
-    .dock {
+    .icon-bar {
       display: flex;
-      justify-content: center;
-      gap: 30px;
-      padding-bottom: 40px;
+      justify-content: space-around;
+      width: 100%;
+      padding: 20px 0;
+      background-color: #ffffff;
+      border-top: 1px solid #ccc;
     }
-
-    .dock img {
+    .icon-bar img {
       width: 60px;
       height: 60px;
-      border-radius: 20px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-      cursor: pointer;
+      border-radius: 15px;
     }
   </style>
 </head>
 <body>
-  <div class="greeting">Hello</div>
-  <div class="dock">
-    <img src="images/icon.phone.webp" alt="Phone">
-    <img src="images/icon.messages.webp" alt="Messages" onclick="location.href='about.html'">
-    <img src="images/icon.apple-music.webp" alt="Music">
+  <div class="header">Hello</div>
+  <div class="icon-bar">
+    <img src="images/icon.phone.webp" alt="Phone" />
+    <img src="images/icon.messages.webp" alt="Messages" />
+    <img src="images/icon.apple-music.webp" alt="Apple Music" />
   </div>
 </body>
 </html>
