--- a/index.html
+++ b/index.html
@@ -1,40 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=390, initial-scale=1.0" />
   <title>Main</title>
   <style>
-    html, body {
+    body {
       margin: 0;
-      padding: 0;
       width: 390px;
       height: 844px;
       overflow: hidden;
+      background-color: white;
       font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-      background-color: #f0f0f0;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      align-items: center;
     }
     .header {
-      margin-top: 60px;
-      font-size: 32px;
-      font-weight: bold;
+      padding: 20px;
+      font-size: 24px;
+      text-align: center;
     }
     .icon-bar {
       display: flex;
       justify-content: space-around;
-      width: 100%;
-      padding: 20px 0;
-      background-color: #ffffff;
-      border-top: 1px solid #ccc;
+      padding: 10px;
+      background-color: #f1f1f1;
     }
     .icon-bar img {
       width: 60px;
       height: 60px;
       border-radius: 15px;
+      cursor: pointer;
     }
   </style>
 </head>
@@ -42,8 +39,8 @@
   <div class="header">Hello</div>
   <div class="icon-bar">
     <img src="images/icon.phone.webp" alt="Phone" />
-    <img src="images/icon.messages.webp" alt="Messages" />
-    <img src="images/icon.apple-music.webp" alt="Apple Music" />
+    <a href="about.html"><img src="images/icon.messages.webp" alt="Messages" /></a>
+    <img src="images/icon.apple-music.webp" alt="Music" />
   </div>
 </body>
 </html>
