--- a/about.html
+++ b/about.html
@@ -1,78 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=390, height=844, user-scalable=no" />
+  <meta name="viewport" content="width=390, initial-scale=1.0" />
   <title>About Me - iMessage Style</title>
   <style>
-    html, body {
+    body {
       margin: 0;
-      padding: 0;
       width: 390px;
       height: 844px;
       overflow: hidden;
+      background-color: white;
       font-family: -apple-system, BlinkMacSystemFont, sans-serif;
       display: flex;
       flex-direction: column;
-      background-color: white;
+      justify-content: space-between;
     }
-
     .chat-container {
       padding: 20px;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      overflow-y: auto;
       flex-grow: 1;
+      overflow-y: auto;
     }
-
     .message {
       position: relative;
       max-width: 75%;
-      padding: 12px 16px;
+      padding: 10px 14px;
       border-radius: 20px;
       font-size: 15px;
       line-height: 1.4;
       word-wrap: break-word;
       background-color: #f1f0f0;
       color: #000;
-      opacity: 0;
-      transform: translateY(20px);
-      animation: slideUp 0.3s forwards;
+      margin-bottom: 10px;
     }
-
     .from-me {
       align-self: flex-end;
       background-color: #007AFF;
       color: white;
-      border-top-right-radius: 4px;
     }
-
     .from-me::after {
       content: "";
       position: absolute;
       bottom: 0;
-      right: -6px;
+      right: -10px;
       width: 0;
       height: 0;
-      border: 6px solid transparent;
+      border: 10px solid transparent;
       border-top-color: #007AFF;
       border-bottom: 0;
       border-right: 0;
       margin-bottom: -1px;
     }
-
-    @keyframes slideUp {
-      from {
-        opacity: 0;
-        transform: translateY(20px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
     .input-area {
       display: flex;
       align-items: center;
@@ -80,7 +58,6 @@
       padding: 10px;
       background-color: white;
     }
-
     input[type="text"] {
       flex: 1;
       padding: 10px 14px;
@@ -89,7 +66,6 @@
       font-size: 16px;
       outline: none;
     }
-
     button {
       margin-left: 10px;
       background-color: #007AFF;
@@ -103,8 +79,8 @@
       justify-content: center;
       align-items: center;
       font-size: 20px;
+      line-height: 1;
     }
-
     button:hover {
       background-color: #005BBB;
     }
@@ -132,5 +108,7 @@
       chat.scrollTop = chat.scrollHeight;
     }
   </script>
+</body>
+</html>
 </body>
 </html>
