--- a/index.html
+++ b/index.html
@@ -1,46 +1,91 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=390, initial-scale=1.0" />
-  <title>Main</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+  <title>Home</title>
   <style>
-    body {
+    /* iPhone 12 기본 뷰포트 맞추기 */
+    body, html {
       margin: 0;
+      padding: 0;
       width: 390px;
       height: 844px;
       overflow: hidden;
-      background-color: white;
-      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+      background: #f0f0f5;
+      font-family: -apple-system, BlinkMacSystemFont, 'San Francisco', 'Helvetica Neue', sans-serif;
       display: flex;
       flex-direction: column;
+      align-items: center;
       justify-content: space-between;
+      position: relative;
     }
-    .header {
-      padding: 20px;
-      font-size: 24px;
-      text-align: center;
-    }
-    .icon-bar {
+
+    /* Hello 텍스트 중앙 배치 */
+    .hello {
+      flex-grow: 1;
       display: flex;
-      justify-content: space-around;
-      padding: 10px;
-      background-color: #f1f1f1;
+      align-items: center;
+      justify-content: center;
+      font-size: 32px;
+      font-weight: 600;
+      color: #000;
     }
-    .icon-bar img {
+
+    /* 아이콘 바 영역 */
+    .dock {
+      width: 100%;
+      height: 90px;
+      background: rgba(255, 255, 255, 0.8);
+      backdrop-filter: blur(10px);
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      border-radius: 30px;
+      margin-bottom: 20px;
+    }
+
+    .dock-icon {
       width: 60px;
       height: 60px;
-      border-radius: 15px;
-      cursor: pointer;
+      border-radius: 18px;
+      overflow: hidden;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      transition: transform 0.2s ease;
+    }
+
+    .dock-icon:hover {
+      transform: scale(1.05);
+    }
+
+    .dock-icon img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 18px;
+    }
+
+    a {
+      text-decoration: none;
     }
   </style>
 </head>
 <body>
-  <div class="header">Hello</div>
-  <div class="icon-bar">
-    <img src="images/icon.phone.webp" alt="Phone" />
-    <a href="about.html"><img src="images/icon.messages.webp" alt="Messages" /></a>
-    <img src="images/icon.apple-music.webp" alt="Music" />
+  <div class="hello">Hello</div>
+
+  <!-- 아이콘 바 -->
+  <div class="dock">
+    <div class="dock-icon">
+      <img src="images/ico.phone.webp" alt="Phone">
+    </div>
+    <a href="about.html">
+      <div class="dock-icon">
+        <img src="images/icon.messages.webp" alt="Messages">
+      </div>
+    </a>
+    <div class="dock-icon">
+      <img src="images/icon.apple-music.webp" alt="Music">
+    </div>
   </div>
 </body>
 </html>
