--- a/index.html
+++ b/index.html
@@ -2,26 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=390, initial-scale=1.0" />
+  <meta name="viewport" content="width=390, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>iPhone UI Portfolio</title>
   <style>
-    * {
+    html, body {
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      background-color: #000;
+      width: 390px;
+      height: 844px;
+      overflow: hidden;
+      background-color: #f2f2f7;
       font-family: -apple-system, BlinkMacSystemFont, sans-serif;
     }
 
     .screen {
-      width: 390px;
-      height: 844px;
-      background-color: #f2f2f7;
-      margin: 0 auto;
-      overflow: hidden;
+      width: 100%;
+      height: 100%;
       position: relative;
       display: flex;
       flex-direction: column;
@@ -29,7 +25,7 @@
     }
 
     .content {
-      flex-grow: 1;
+      flex: 1;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -40,26 +36,25 @@
 
     .dock {
       height: 100px;
-      background-color: #e5e5ea;
       display: flex;
       justify-content: center;
       align-items: center;
       gap: 20px;
       padding-bottom: 20px;
+      background-color: transparent;
     }
 
     .dock img {
       width: 60px;
       height: 60px;
       border-radius: 18px;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
       object-fit: cover;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
       cursor: pointer;
     }
   </style>
 </head>
 <body>
-
   <div class="screen">
     <div class="content">
       Hello
@@ -72,6 +67,6 @@
       <img src="images/icon.apple-music.webp" alt="Music" />
     </div>
   </div>
-
 </body>
 </html>
+
