--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       width: 390px;
-      height: 844px;
+      height: 100vh; /* 여기만 수정됨 */
       overflow: hidden;
       background-color: #f2f2f7;
       font-family: -apple-system, BlinkMacSystemFont, sans-serif;
@@ -69,4 +69,3 @@
   </div>
 </body>
 </html>
-
