--- a/about.html
+++ b/about.html
@@ -66,12 +66,14 @@
     }
 
     .input-area {
-      flex-shrink: 0;
-      display: flex;
-      border-top: 1px solid #ccc;
-      padding: 10px;
-      background-color: white;
+    flex-shrink: 0;
+    display: flex;
+    border-top: 1px solid #ccc;
+    padding: 16px 14px 20px;
+    background-color: white;
+    margin-bottom: 10px; /* 이 부분이 추가됨 → 입력창 전체 위치 위로 띄움 */
     }
+
 
     input[type="text"] {
       flex: 1;
