--- a/facetime.html
+++ b/facetime.html
@@ -2,127 +2,128 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=390, height=844, user-scalable=no" />
-  <title>FaceTime</title>
+  <meta name="viewport" content="width=390, user-scalable=no" />
+  <title>FaceTime Incoming</title>
   <style>
-    * {
+    body {
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-    }
-    body {
       width: 390px;
-      height: 844px;
+      height: 810px;
       overflow: hidden;
-      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-      color: white;
+      font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Helvetica Neue', sans-serif;
       position: relative;
+      background-color: black;
     }
+
     video {
       position: absolute;
       width: 100%;
       height: 100%;
       object-fit: cover;
+      z-index: 0;
     }
+
     .overlay {
       position: absolute;
-      top: 0;
-      left: 0;
+      z-index: 1;
       width: 100%;
       height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      padding: 40px 20px 60px;
-      background-color: rgba(0, 0, 0, 0.2);
-    }
-    .caller-info {
+      top: 0;
+      left: 0;
+      color: white;
       text-align: center;
-      margin-top: 30px;
     }
-    .caller-info h2 {
+
+    .caller-info {
+      margin-top: 80px;
+    }
+
+    .caller-info h1 {
       font-size: 28px;
+      margin: 0;
       font-weight: 500;
     }
+
     .caller-info p {
       font-size: 18px;
-      opacity: 0.8;
       margin-top: 4px;
+      color: rgba(255, 255, 255, 0.8);
     }
-    .top-icons {
+
+    .top-buttons {
       display: flex;
       justify-content: space-between;
-      padding: 0 50px;
-      margin-top: auto;
+      padding: 0 40px;
+      margin-top: 400px;
     }
-    .icon-group {
+
+    .top-buttons div {
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 8px;
       font-size: 14px;
+      color: white;
     }
-    .icon-group svg {
+
+    .top-buttons svg {
       width: 28px;
       height: 28px;
-      fill: white;
+      margin-bottom: 6px;
     }
-    .buttons {
+
+    .bottom-buttons {
       display: flex;
-      justify-content: space-around;
-      align-items: center;
+      justify-content: center;
+      gap: 60px;
       margin-top: 40px;
     }
-    .button-img {
-      width: 70px;
-      height: 70px;
+
+    .bottom-buttons img {
+      width: 65px;
+      height: 65px;
+      border-radius: 50%;
     }
-    .end-accept-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 6px;
-    }
-    .end-accept-container img {
-      width: 85px;
-      height: auto;
-    }
-    .end-accept-container span {
+
+    .end-accept {
+      margin-top: 10px;
       font-size: 14px;
     }
   </style>
 </head>
 <body>
-  <video autoplay muted loop>
-    <source src="weverse_20241102035102_1317778128.MP4" type="video/mp4" />
-  </video>
+  <video src="videos/shinyu.MP4" autoplay muted loop playsinline></video>
+
   <div class="overlay">
     <div class="caller-info">
-      <h2>Mom</h2>
+      <h1>Mom</h1>
       <p>FaceTime Video</p>
     </div>
-    <div class="top-icons">
-      <div class="icon-group">
-        <!-- Clock Icon -->
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 1.75a10.25 10.25 0 1 0 0 20.5 10.25 10.25 0 0 0 0-20.5Zm0 18.5a8.25 8.25 0 1 1 0-16.5 8.25 8.25 0 0 1 0 16.5Zm.75-8.68V6.5a.75.75 0 0 0-1.5 0v5.25c0 .414.336.75.75.75h3a.75.75 0 0 0 0-1.5h-2.25Z"/></svg>
+
+    <div class="top-buttons">
+      <div>
+        <!-- Bell icon for Remind Me -->
+        <svg fill="white" viewBox="0 0 24 24"><path d="M10 21h4a2 2 0 1 1-4 0Zm8-5v-5a6 6 0 1 0-12 0v5l-2 2v1h16v-1l-2-2Z"/></svg>
         <span>Remind Me</span>
       </div>
-      <div class="icon-group">
-        <!-- Message Icon -->
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2C6.486 2 2 6.016 2 11c0 2.162.936 4.136 2.49 5.651l-.764 3.493a.5.5 0 0 0 .638.583l3.889-1.111C9.187 20.527 10.574 21 12 21c5.514 0 10-4.016 10-9s-4.486-10-10-10z"/></svg>
+      <div>
+        <!-- Message bubble icon -->
+        <svg fill="white" viewBox="0 0 24 24"><path d="M2 3h20v14H6l-4 4V3z"/></svg>
         <span>Message</span>
       </div>
     </div>
-    <div class="buttons">
-      <div class="icon-group">
-        <img src="decline.PNG" alt="Decline" class="button-img" />
-        <span>Decline</span>
+
+    <div class="bottom-buttons">
+      <div>
+        <img src="images/d1.PNG" alt="Decline" />
       </div>
-      <div class="end-accept-container">
-        <img src="accept.PNG" alt="End & Accept" />
-        <span>End & Accept</span>
+      <div>
+        <img src="images/d2.PNG" alt="Accept" />
+        <div class="end-accept">End & Accept</div>
       </div>
     </div>
   </div>
 </body>
+</html>
+
 </html>
